<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">ISleep</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="please_input_the_invitation_code">请连接i-Sleep接收盒，并输入接收盒的ID码</string>
    <string name="you_have_two_chances">你还有2次机会</string>
    <string name="you_have_one_chances">你还有1次机会</string>
    <string name="sleep_debt">睡眠负债</string>
    <string name="today_sleep">今日睡眠</string>
    <string name="alarm_manage">智能闹钟</string>
    <string name="sleep_record">录音</string>
    <string name="record_succeed">记录成功 !</string>
    <string name="sleep_remark">备注:</string>
    <string name="comfirm">确定</string>
    <string name="cansel">取消</string>
    <string name="exitScreen">再按一次退出</string>
    <string name="sleepStart">睡眠开始</string>
    <string name="notopen">未开启</string>
    <string name="clock">闹钟</string>
    <string name="addclock">添加闹钟</string>
    <string name="edit_record">编辑记录</string>
    <string name="today_no_record">今天没有睡眠记录</string>
    <string name="please_open_a_clock_to">接下来的一天里你必须开启一个闹钟以便能让智能闹钟在一个合适的时间开启一个闹钟</string>
    <string name="reset_sleepdebt">重置睡债</string>
    <string name="reset_sleepdebt_content">重置睡债将当前睡债的起始计算时间调整到今天,没有记录将被改变,这仅仅会调整这个数字的计算方法而已。</string>
    <string name="reset">重置</string>
    <string name="sleep_record_edit">睡眠记录编辑</string>
    <string name="duration">时长</string>
    <string name="save">保存</string>
    <string name="sleep_time">睡觉时间：</string>
    <string name="wake_time">起床时间：</string>
    <string name="delete_succeed">删除成功</string>
    <string name="save_succeed">保存成功</string>
    <string name="stop_play">停止播放</string>
    <string name="please_select_correct_time">请选择正确的时间</string>
    <string name="everyday_avarge_time">每天平均睡眠</string>
    <string name="tel_number">手机号</string>
    <string name="environmental_noise">环境噪音监控</string>
    <string name="breathe_noise">呼吸噪音监控</string>
    <string name="about_noise_analogy">关于声音类比</string>
    <string name="noise_analogy">声音类比</string>
    <string name="sound_set">声音设置</string>
    <string name="environment_noise_check">环境噪音检测</string>
    <string name="noise_duration_setting">噪音持续时间设置</string>
    <string name="breathe_noise_check">呼吸声监测</string>
    <string name="breathe_duration_setting">呼吸持续时间设置</string>
    <string name="noise_duration">噪音持续时间</string>
    <string name="alert_tel">请先设置报警电话</string>
    <string name="noise_alert_succeed">噪音报警开启成功</string>
    <string name="sleep">睡眠</string>
    <string name="db">声贝</string>
    <string name="please_insert_sdcard">请插入内存卡</string>
    <string name="sound_save_path">录音保存的位置</string>
    <string name="list">列表</string>
    <string name="trend">趋势</string>
    <string name="Help">帮助</string>
    <string name="hours">小时</string>
    <string name="hour">（小时）</string>
    <string name="add">增加</string>
    <string name="share">分享</string>
    <string name="from">从</string>
    <string name="to">到</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="title_activity_clock_setting">ClockSettingActivity</string>
    <string name="setting">设置</string>
    <string name="open">开启了</string>
    <string name="close">关闭了</string>
    <string name="silence">静音</string>
    <string name="dayOfClock">计划天数</string>
    <string name="noRepreat">不重复</string>
    <string name="WorkDay">工作日</string>
    <string name="WeekDay">周末</string>
    <string name="EveryDay">每天</string>
    <string name="minutes">分钟</string>
    <string name="days">天</string>
    <string name="play_sound">播放录音</string>
    <string name="wake_up">起床</string>
    <string name="title_activity_clock_sleep">ClockSleepActivity</string>
    <string name="title_activity_clock_add">ClockAddActivity</string>
    <string name="title_activity_sleep_edit">SleepEditActivity</string>
    <string name="title_activity_noise_set">NoiseSetActivity</string>
    <string name="noise_detail">0-20分贝:很静，几乎感受不到;\n\n20-40分贝:安静，犹如轻声絮语;\n\n40-60分贝:一般，普通室内聊天;\n\n60-70分贝:吵闹，有损神经;\n\n70-90分贝:很吵，神经细胞遭到破坏;\n\n90-100分贝:吵闹加剧、听力受损;\n\n100-120分贝:难以忍受，呆一分钟即暂时致聋;\n\n120分贝以上:极度聋或全聋</string>
    <string name="title_activity_noise_detail">NoiseDetailActivity</string>
    <string name="title_activity_noise_tel">NoiseTelActivity</string>
    <string name="noise_tel_tip1">如果环境噪音大于你设置的分贝，系统会通过手机号码通知你，优先第一个手机号码</string>
    <string name="noise_tel_tip2">如果你当前号码不使用，请及时来更改</string>
    <string name="your_tel">你的手机号:</string>
    <string name="title_activity_noise_choice">NoiseChoiceActivity</string>
    <string name="share_content">ISleep very好，very强大</string>
    <string name="sleep0">帮助宝宝睡眠的食物 色氨酸是一种自然的引导睡眠的氨基酸，它能增加体内褪黑色素和血管收缩素来帮忙调解睡眠周期。它自然生长于： \n●樱桃 \n●香蕉 \n●无花果 \n食物中含大量纤维和钙或中量蛋白质同样可加速脑中这些元素的释放。 \n●奶制品：牛奶、奶酪、乳酸（2岁以内婴儿不宜喂鲜牛奶 ） \n●全麦：面包、谷麦食品 \n●大米、燕麦 \n●种子：芝麻、向日葵籽、亚麻籽（颗粒状食物，要注意宝宝吞咽） \n●果仁：榛子、花生、核桃（颗粒状食物，要注意宝宝吞咽） \n●豆角类 \n●蛋白质：鸡蛋、白肉、花生酱（鸡蛋的摄取量要注意不要过量） \n●鱼类：沙文、大比目鱼、金枪鱼 \n●钙丰富：无头甘蓝 \n●镁丰富：美式杏仁（颗粒状食物，要注意宝宝吞咽） \n零食点子： \n●色氨酸要一个小时才能到达脑部，所以不要临睡才吃！ \n●牛奶加全麦制品（全麦低糖、2岁以内婴儿不宜喂鲜牛奶 ） \n●全麦花生酱三明治 \n●牛奶加麦片或麦片饼干（2岁以内婴儿不宜喂鲜牛奶 ） \n●乳酸加果仁（颗粒状食物，要注意宝宝吞咽） \n零食食谱 \n●全麦花生酱三明治 \n原料：一包全麦面包、一瓶花生酱 \n做法：取两片全麦面包，在一片上抹一小匙花生酱，用另一片覆盖便可食用。 \n●牛奶麦片粥 \n原料：牛奶、麦片、水 \n●莲子百合粥 \n原料：莲子30克、百合15克、土米60克、冰糖末30克 \n做法：将百合洗净，切成小片，莲子去皮去心，大米洗净;锅内加水，放入莲子、大米同煮;煮熟后加入百合、冰糖，再煮至酥软即可。 \n避免： \n●咖啡因：咖啡、巧克力、可可、茶 \n●垃圾食品或加工纤维 \n●高脂油腻或辛辣食物 \n●酒精、尼古丁</string>
    <string name="sleep1">①、适宜的睡眠环境-----一般晚上八点以后不要再逗宝宝宝玩耍，让宝宝宝提前进入睡眠的环境，电视关小声或者关掉，保持安静，可以适当地放点轻音乐，或者唱点催眠曲给他听 \n②、区别黑夜和白天------在晚上宝宝入睡前一两小时，把室内的光线调暗，在宝宝该睡觉的时候，关掉所有的灯。不要让外面透光或传进嘈杂声。通过光亮、黑暗的对比让宝宝学会分别白天与黑夜，醒着与睡着的区别。 \n③、督促宝宝规律睡眠------爸爸妈妈要寻找宝宝自身的睡眠规律，然后量身订制宝宝的睡眠时间表，可以观察宝宝不同时间睡觉后，醒时的精神状态，然后按照宝宝的最佳状态做调整。 \n④、顺从宝宝习惯小动作----哄宝贝睡觉，注意宝宝一些习惯的小动作。摸清宝宝睡觉的小习惯后，顺着宝宝的习惯，很容易就会哄宝宝睡着。 \n⑤、限制玩乐时间----临近晚上睡觉的时候也不要抱着到处逛。可以和宝宝玩玩比较安静的游戏，适当地给他一些诸如纸盒、摇铃、橡胶玩具等小玩具，或是听听舒缓的音乐，念念儿歌，感觉宝宝有些累的时候，就赶快喂奶，宝宝吸着吸着就睡着了。 \n⑥、洗澡助睡----观察宝宝的精神状态，如果感觉宝宝有点困了，可以给宝宝洗个热水澡，洗完后直接抱上床，给宝宝喝点奶，然后关掉房间的灯，并且和宝宝一起躺在床上，轻拍宝宝的背，宝宝很快就能入睡。 \n\n小贴士：以上方法根据宝宝的年龄，看看哪个最适合宝宝。</string>
    <string name="sleep2">·婴儿床，最好带蚊帐---床铺上方不要堆放物品，防止物品坠落，受到意外伤害 \n·婴儿床围-----预防宝宝碰伤 \n·床垫------软硬适中 \n·被子------纯棉，外罩还可拆卸 \n·夜灯------防止半夜宝宝醒来，打开的灯光不会刺激宝宝 \n·床头音乐铃---可以安抚宝宝的情绪 \n·尿垫、尿布------防止宝宝夜间需要换尿布 \n宝宝睡眠卫生原则：  \n·坚持宝宝规律正常作息时间 \n·睡眠环境安静，避免光线干扰 \n·室温最好保持在比较稳定的温度和湿度，室温不要过热． \n·严格实行入睡、起床的时间，加强生理节奏周期的培养． \n·卧床时应避免饥饿，上床时或夜间不宜饮水过多，以免扰乱睡眠． \n·宝宝最好单独睡小床，研究证明单独睡比和母亲同床睡能睡得更好． \n·睡前1一2小时避免剧烈活动或玩得太兴奋． \n·宝宝半夜醒来，一般开始的时候都是哼唧哼唧的，尽量哄宝宝入睡。可一旦宝宝大哭生气，那很有可能宝宝是真的饿了，可以给宝宝喂点奶后再让宝宝入睡。千万不要宝宝一有动静就去哄，这会造成宝宝的依赖。</string>
    <string name="sleep3">新生儿大部分时间都在睡觉，一天累计的睡眠时间大约在18~22小时。随着宝宝年龄的增长，其睡眠时间也会逐渐缩短。2~5个月的宝宝睡眠时间大致是15~18个小时，6~12个月的宝宝睡眠时间大致在14~16个小时，1~3岁的宝宝睡眠时间大致在10~12个小时。新生儿大部分时间都在睡觉，一天累计的睡眠时间大约在18~22小时。随着宝宝年龄的增长，其睡眠时间也会逐渐缩短。2~5个月的宝宝睡眠时间大致是15~18个小时，6~12个月的宝宝睡眠时间大致在14~16个小时，1~3岁的宝宝睡眠时间大致在10~12个小时。</string>
    <string name="sleep4">①当宝宝哭闹或睡不安时，不能将宝宝抱在怀里，或放入摇篮中不停地摇晃，摇晃会使宝宝未成熟的大脑与坚硬的颅骨相撞，造成小血管破裂，颅内出血，造成“摇晃婴儿综合征”； \n②不能长期陪睡，长期陪睡还会使宝宝养成“恋母”心理，而且陪睡过程中如果搂着宝宝睡的话稍不注意就可能压住小宝宝； \n③宝宝喜欢趴着睡，五个月以下的宝宝还不会翻身，也不会主动避开口鼻前的障碍物，容易使口鼻阻塞而缺氧窒息，所以宝宝仰睡最安全，使呼吸道通畅无阻。对于刚吃完奶的宝宝可采取右侧位睡，若有吐奶也不会呛入气管内。如果发现宝宝俯睡，要及时帮宝宝调整姿势，以防意外。 \n④含着乳头睡觉，宝宝醒后就会吮吸乳头吃奶，这样容易使宝宝的胃肠功能紊乱而发生消化不良；再者，宝宝呼吸不畅，导致睡眠不安，甚至可能引起窒息；而且，还会影响宝宝牙床的正常发育，易生蛀牙</string>
    <string name="sleep5">研究人员发现，趴着睡的宝宝智力发育较快，但是躺着睡的宝宝也能够慢慢赶上趴着睡的宝宝。所以建议五个月以下还不会翻身的宝宝躺着睡好，五个月以后能自如翻身之后可以趴着睡。 \n趴睡的好处：\n①胎儿在母亲的子宫内就是腹部朝内，背部朝外的蜷曲姿势，这种姿势是最自然的自我保护姿势，所以宝宝趴睡时更有安全感，容易睡得熟，不易惊醒，有利于宝宝神经系统的发育。 \n②趴睡还能使宝宝抬头挺胸，锻炼颈部、胸部、背部及四肢等大肌肉群，促进宝宝肌肉张力的发展。趴睡还能防止因胃部食物倒流到食道及口中引发的呕吐及窒息，消除胀气。 \n③儿胃的容量很小，弯曲度不够，加上贲门部收缩力弱，所以婴儿吐乳是极为常见的现象。贲门靠近胃部中间，人体趴着时贲门部被抬高，可以预防吐奶。这时即使发生吐奶，由于脸朝下，也不至于因呕吐物吸入气管而造成窒息。 \n④趴着睡，胸廓受压，床的反作用力可促进心肺的发育。婴儿2个月时就已能抬头，随着孩子四肢的发育，他们开始能独立、随意的进行肢体运动。趴着睡更有利于肢体锻炼。从开始的抬头到两腕支撑抬头，可以增强腕、臂和项背等肌肉的力量。同时孩子从小通过自己的努力做各种力所能及的事情，有利于培养独立、自强的精神。 \n⑤不适合趴着睡的宝宝</string>
    <string name="sleep6">①让宝宝入睡可以轻轻地拍拍他的背，避免拥抱摇晃。对不愿入睡而哭泣的宝宝，你可以坐在他的床边，握着他的小手，直到他入睡。过几天后，你与宝宝保持一定距离，让他看得到你，以后再停留较短的时间，让宝宝慢慢适应单独入睡。 \n②晚上尽量不要开灯，在喂奶或换尿布时，可开一下床旁小灯，完事后立即关灯，宝宝对周围环境的调节能力较差，若室内通宵亮着灯，改变了人体适应昼明夜暗的自然规律，会影响生长激素在夜间的分泌高峰，使身高增长减慢。夜亮也会使褪黑激素分泌减少，睡眠易惊醒。椐调查，经常开灯睡的宝宝，近视眼发病率高达40%以上 \n③每日让宝宝尽早入睡，长期坚持可以养成早睡的好习惯。由于生长激素的分泌高峰是在夜间22～24点，如果晚睡，宝宝体内的生长激素的分泌势必减低，身高便会受到影响；晚睡还会造成睡眠不足，影响正常的生活。因此，你应该以身作则，培养宝宝早睡早起的好习惯。 患先天性心脏病、先天性喘鸣、肺炎、感冒咳嗽时痰多、脑性麻痹的宝宝，以及某些病态腹胀的宝宝，例如患先天肥大性幽门狭窄、十二指肠阻塞、先天性巨结肠症、胎便阻塞、坏死性肠炎、肠套叠和其它如腹水、血液肿瘤、肾脏疾病及腹部肿块等疾病的宝宝 \n④哪些宝宝很适合趴睡 患胃食道逆流、阻塞性呼吸道异常、斜颈等的宝宝，可以尝试趴睡，以帮助缓解病情。下巴小、舌头大、呕吐情形严重的小孩，必须趴睡。另一种状况要特别注意，幼儿有痰时，常常会呕吐，一旦有呕吐，要让幼儿趴下，使食物流出，才可再躺下，否则容易引起窒息。</string>
    <string name="sleep7">设身处地地为宝宝想，当然是依偎在母亲的怀里，闻着妈妈熟悉的味道，听着妈妈的心跳和呼吸节拍，这样的睡眠更美好。《亲密育儿百科》的作者西尔斯医生建议西方的父母们学习东方父母那种更天然原始的亲密育儿方式。其中，和宝宝一起睡，是与母乳亲喂、将宝宝背在身上、及时回应宝宝的需求等一样重要的亲密育儿方法。当然，他也强调要找到适合每个家庭的睡眠形式，关键是找到一个让妈妈和宝宝睡眠质量最好的办法。 用西尔斯医生的话说，总有一天孩子会选择自己独自睡的，而童年时期那些和父母相依而眠的美好体验将成为他人生最美好的记忆之一。对此我深有同感，我小时候觉得和爸爸妈妈一起睡觉特别幸福。有了这样的理论背景与实践总结打底，对他人所谓“睡小床更培养独立性”的论调，便一笑而过。</string>
    <string name="sleep8">一个合适的枕头，不仅能让宝宝睡出一个完美头形，还能促进身体的健康发育。如何选择和使用枕头，自然就成了宝宝的头等大事。妈妈在选择枕头时，要注意枕头的高度、宽度、长度，还要注意枕套、枕芯的材料和软硬度等等。宽度与宝宝两肩的宽度相等为宜，或稍宽些；高度三四个月的宝宝约1—2cm；6个月以后的宝宝约3—4cm；3岁以上宝宝约为6—9cm。 刚出生的宝宝一般不需要使用枕头，因为新生儿头部大小几乎与肩同宽。平躺时，背部和后脑勺在同一平面上；侧卧时，头和身体也在同一平面上。但是如果床垫比较软、天冷时穿着厚厚的衣服睡觉，或者发生溢奶情况时，妈妈可以将成人洗脸用的毛巾对折2次，垫在宝宝的头下方。或者让宝宝右侧卧，并将上半身用折过的毛巾稍微垫高一些。 等小宝宝长到3个月左右，学会了抬头以后，脊柱颈段出现向前的生理弯曲。这时开始使用枕头就比较适宜了。但是，有很多宝宝睡觉时，常常会不知不觉地把枕头撇在一边，妈妈准备的小枕头根本就没用上。1岁前的宝宝，头部还比较大，脊柱弯曲度不深，只要宝宝自己不觉得难受，不用枕头也没有关系。但是随着身体的发育，孩子的肩部逐渐增宽。为了保护正常的生理弯曲，维持睡眠时正常的生理活动，睡觉时还是应该使用枕头的。一个好枕头，可以很好地支撑颈椎。少了它，睡眠质量会大打折扣。 宝宝用的枕头，究竟是该硬一些还是软一些呢？有些妈妈喜欢给宝宝用稍微硬一些的枕头，认为这样可以使宝宝的头骨长得结实，头形长得好看，但这样的做法并不正确。质地过硬的枕头，睡后易使颈部肌肉疲劳，造成落枕。而小宝宝颅骨较软，囱门和颅骨线还未完全闭合，长期使用，反而会造成头颅变形或者大小脸，影响外形美观。可是，太软的枕头又不能很好地支撑颈椎，而且由于与宝宝头皮的接触面过大，不利于血液循环，透气性差，甚至影响呼吸，特别是宝宝发烧时更不适宜使用。因此，小宝宝的枕头要软硬适度，如果妈妈是自己做的枕芯，不妨选用荞麦皮、油菜籽、茶叶、菊花等绿色材料作为填充物</string>
    <string name="title_activity_help_detail">HelpDetailActivity</string>
    <string name="title_activity_null">NullActivity</string>
    <string name="title_activity_noise_duration_time">NoiseDurationTimeActivity</string>
    <string name="title_activity_index">IndexActivity</string>
</resources>