<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/dialog_bg" android:padding="10.0dip" android:layout_width="250.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/please_input_the_invitation_code" />
    <EditText android:id="@id/edt_code" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:singleLine="true" android:inputType="number" />
    <TextView android:textSize="14.0sp" android:textColor="#ffff0000" android:id="@id/tv_chances" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/you_have_two_chances" />
    <Button android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/btn_commit" android:background="@drawable/btn_delete_sel" android:layout_width="fill_parent" android:layout_height="35.0dip" android:layout_marginTop="10.0dip" android:text="@string/save" />
</LinearLayout>