<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_dialog_record" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="95.0dip">
        <TextView android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/tv_dialog_sleep_title" android:text="@string/record_succeed" style="\@style/tv_sleep_title" />
    </LinearLayout>
    <TextView android:background="@drawable/line" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingLeft="25.0dip" android:paddingRight="25.0dip" android:layout_width="fill_parent" android:layout_height="125.0dip">
        <TextView android:gravity="left" android:layout_gravity="center" android:id="@id/tv_dialog_sleep_time" android:text="睡眠开始\n从 10:00p.m　　到 10:00p.m\n(12小时)" android:lineSpacingExtra="5.0dip" style="\@style/tv_sleep_content" />
    </LinearLayout>
    <TextView android:background="@drawable/line" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:paddingLeft="25.0dip" android:paddingRight="25.0dip" android:layout_width="fill_parent" android:layout_height="125.0dip">
        <LinearLayout android:orientation="horizontal" android:id="@id/lin_sleep_xin" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
            <TextView android:id="@id/tv_sleep_remark" android:text="@string/sleep_remark" android:layout_weight="0.0" style="\@style/tv_sleep_content" />
            <EditText android:id="@id/edt_sleep_remark" android:background="@drawable/bg_edt_remark" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:maxLines="3" android:layout_weight="0.0" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:background="@drawable/line" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingLeft="10.0dip" android:paddingTop="17.0dip" android:paddingRight="10.0dip" android:paddingBottom="17.0dip" android:layout_width="fill_parent" android:layout_height="90.0dip">
        <Button android:textSize="@dimen/size_btn" android:textColor="@color/white" android:id="@id/btn_sleep_confirm" android:background="@drawable/btn_confirm_sel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/comfirm" android:layout_weight="1.0" />
        <Button android:textSize="@dimen/size_btn" android:textColor="@color/white" android:id="@id/btn_sleep_cansel" android:background="@drawable/btn_cansel_sel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/cansel" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>