<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/noise_tel_tip1" android:layout_weight="0.0" style="\@style/tv_sleep_content" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@color/white" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/your_tel" android:layout_weight="0.0" />
        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:id="@id/btn_tel1" android:background="@drawable/edt_bg" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="+86" android:drawableRight="@drawable/index_bottom_black" />
        <EditText android:textSize="16.0sp" android:textColor="@color/black" android:id="@id/edt_tel1" android:background="@drawable/edt_bg" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:singleLine="true" android:inputType="number" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@color/white" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/your_tel" android:layout_weight="0.0" />
        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:id="@id/btn_tel2" android:background="@drawable/edt_bg" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="+86" android:drawableRight="@drawable/index_bottom_black" />
        <EditText android:textSize="16.0sp" android:textColor="@color/black" android:id="@id/edt_tel2" android:background="@drawable/edt_bg" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:singleLine="true" android:inputType="number" />
    </LinearLayout>
    <TextView android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/noise_tel_tip2" android:layout_weight="0.0" style="\@style/tv_sleep_content" />
    <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0">
        <Button android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/btn_telsave" android:background="@drawable/btn_delete_sel" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/save" />
    </LinearLayout>
</LinearLayout>